--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -30,4 +30,45 @@
         //TODO #4: Loop over the search results to display all job fields.
     }
 
+@*make a new div here?*@
+
+@*the code copied from my list view*@
+<table class="centeredTable">
+    <tr>
+        @foreach(var column in ViewBag.columns)
+        {
+            <th>@column.Value</th>
+        }
+    </tr>
+    <tr>
+        @{
+            //no longer todo 2/ that task was completed by this point:
+            //TODO #2: Complete the View Jobs By Category Table
+            //i think i can just delete all of this
+        }
+
+        <td>
+            <ul>
+                <li><a asp-controller="List" asp-action="Jobs" asp-route-column="All" asp-route-value="all">All Jobs</a>
+                    </li>
+                    </ul>
+                    </td> 
+                    @* Feel free to remove or modify this element if necessary. *@
+                    @*exception thrown on line below/ still working on the Search Controller though*@
+        @foreach (var category in ViewBag.tableChoices)
+        {
+            <td>
+                <ul>
+                    @foreach (var item in category.Value)
+                    {
+                        <li>
+                            <a asp-controller="List" asp-action="Jobs" asp-route-column="@category.Key" asp-route-value="@item">@item</a>
+                        </li>
+                    }
+                </ul>
+            </td>
+        }
+    </tr>
+        </table>
+
 </div>
