--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -26,49 +26,37 @@
 
     <hr />
 
+
+@*I added the closing div tag below but that didn't fix my problem*@
+</div>
     @{
         //TODO #4: Loop over the search results to display all job fields.
     }
 
 @*make a new div here?*@
 
+<table class="job-listing">
+
+            
+            @if (ViewBag.jobs == null)
+            {
+                <p style="font-size:150%"><i>***start your search here***</i></p>
+            }
+            else
+            {
+            @foreach (var field in ViewBag.jobs)
+            {
+                <tr>
+                    <td>ID: @field.Id<br />Name: @field.Name<br />Employer: @field.Employer<br />Location: @field.Location<br />Position Type: @field.PositionType<br />Skill: @field.CoreCompetency</td>
+                </tr>
+            }
+            }
+            </table>
+
+
+
+
+
 @*the code copied from my list view*@
-<table class="centeredTable">
-    <tr>
-        @foreach(var column in ViewBag.columns)
-        {
-            <th>@column.Value</th>
-        }
-    </tr>
-    <tr>
-        @{
-            //no longer todo 2/ that task was completed by this point:
-            //TODO #2: Complete the View Jobs By Category Table
-            //i think i can just delete all of this
-        }
-
-        <td>
-            <ul>
-                <li><a asp-controller="List" asp-action="Jobs" asp-route-column="All" asp-route-value="all">All Jobs</a>
-                    </li>
-                    </ul>
-                    </td> 
-                    @* Feel free to remove or modify this element if necessary. *@
-                    @*exception thrown on line below/ still working on the Search Controller though*@
-        @foreach (var category in ViewBag.tableChoices)
-        {
-            <td>
-                <ul>
-                    @foreach (var item in category.Value)
-                    {
-                        <li>
-                            <a asp-controller="List" asp-action="Jobs" asp-route-column="@category.Key" asp-route-value="@item">@item</a>
-                        </li>
-                    }
-                </ul>
-            </td>
-        }
-    </tr>
-        </table>
-
-</div>
+@*deleted bc copied wrong fragment*@
+  
